# endokernel-paper-ver

./: README.md
glibc_patch/: 2.32.diff  README.md
kernel_patch/: README.md  v5.9.8.diff
poc/: sendmsg.c
src/libintravirt/: .gitignore  CMakeLists.txt  api.h  app.S  app.c  app.h  app2.c  app2_xcall.h  app_template.S  app_xcall.h  asm-offsets.h  cet.c  cet.h  filter.c  gen_asm.c  iv_debug.h  mt.c  mt.h  mt_trampoline.S  pkru.h  printf.c  queen.c  queen.h  rawcall.h  shim.lds  shim.map  shim_debug.c  shim_defs.h  shim_rtld.c  shim_signal.c  shim_signal.h  shim_signal_trampoline.S  shim_syscalls.c  shim_syscalls.h  shim_syscalls_passthru.c  shim_table.c  shim_table.h  shim_trampoline.S  shim_trampoline.c  shim_trampoline.h  (+3 more)
src/libintravirt/erim/: README.md  erim.c  erim.h  erim_api_inlined.h  erim_shmem.c  erim_shmem.h  pkeys.h  shared_malloc.c  shared_malloc.h
src/libintravirt/erim/mmap/: map.c  map.h
src/libintravirt/erim/testinlined/: .gitignore  makefile  test_application.c  test_application_integrity.c
src/libintravirt/erim/testoverlay/: makefile  test_application.c  test_application_integrity.c
src/libintravirt/stdlib/: printfmt.c
src/libiso/: Makefile  iso.h  iso_align.h  iso_end.h  iso_init.h  iso_xcall.h  isoalloc.h  test.c  test_sand.c
src/libtemporal/: CMakeLists.txt  small.c  small.h  temporal.c  temporal.h
src/libtemporal/test/: baseline.c  benchmark.h  benchmark_main.c  cases.h  main.c  syscall_policy.c
src/tests/: Makefile  copy.sh  direct.c  edcode.c  exec.c  fork.c  jmp.c  normal.c  pkey_test.c  random_jmp.c  sig_entrance_attack.c  signal.c  system.c  thread.c
